⚡️ Added option for user to add addons not in presets.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,16 +4,15 @@
   "what_does_it_do_desc": "Stremio Account Bootstrapper lets you set up your Stremio account with just a few clicks by bootstrapping a preset into your account. It's handy for newcomers, those who want a solid foundation to build their setup on, or to speed up the process of setting up new accounts for family members or friends.",
   "which_addons_title": "Which addons does the preset include?",
   "instructions_title": "Instructions",
-  "instructions_1": "Log in using your Stremio credentials or get the Stremio Authkey. If you have created your account through Facebook, please use the latter <a href=\"#how\">(?)</a>. If you don't have an account, you can create one by clicking \"Sign up\".",
-  "instructions_2": "Create a backup of your current configuration (recommended). This will allow you to restore your current setup if needed.",
-  "instructions_3": "Select your preferred preset.<br /><i>The Factory option allows you to reset the account to the same state as a recently created one.</i>",
-  "instructions_4": "Select your debrid service and enter the API key (optional) <a href=\"#faq\">(?)</a>.<br />If you choose not to include it, ⚠️ <strong class=\"text-error\">you will be torrenting</strong> ⚠️. Please review your country's policies on torrenting before proceeding.",
-  "instructions_5": "Select additional addons/options (optional).",
-  "instructions_6": "Enter your RPDB key (optional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
-  "instructions_7": "Customize the addons preset (optional). You have the option to remove or sort addons, and rename or delete the AIOLists/Anime Kitsu catalogs.",
-  "instructions_8": "Once you have finished customizing, click \"Sync to Stremio\" to update your account.",
-  "instructions_9": "Go to Stremio settings to adjust your preferred language options.",
-  "instructions_10": "Enjoy your favorite movies, TV shows, and live TV!",
+  "instructions_1": "Log in using your Stremio credentials or get the Stremio Authkey <a href=\"#how\" >(?)</a>.",
+  "instructions_2": "Select your preferred language.<br /><i>The Factory option allows you to reset the account to the same state as a recently created one.</i>",
+  "instructions_3": "Select your preferred Trakt catalog. Only alternate English catalogs are supported.",
+  "instructions_4": "Select your debrid service and enter the API key (optional) <a href=\"#faq\" >(?)</a>.<br />If you choose not to include it, ⚠️ <strong class=\"text-error\">you will be torrenting</strong> ⚠️. Please review your country's policies on torrenting before proceeding.<br /><i>Please note that MediaFusion, KnightCrawler, and ThePirateBay+ are only available when NO key is provided, while Jackettio is available when a key IS provided.</i>",
+  "instructions_5": "Enter your RPDB key (optional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\" >(?)</a>.",
+  "instructions_6": "Customize the addons preset (optional). You have the option to remove or sort addons, and rename or delete the Trakt/Anime Kitsu catalogs. Custom addons not provided can be added by clicking on <code>Show Advanced Options</code> and pasting the addon's manifest URL.",
+  "instructions_7": "Once you have finished customizing, click \"Sync to Stremio\" to update your account.",
+  "instructions_8": "Go to Stremio settings to adjust your preferred language options.",
+  "instructions_9": "Enjoy your favorite movies and TV shows!",
   "warning": "⚠️ You will <strong class=\"text-error\">wipe the existing setup</strong>. Recommended to create a backup before proceeding. ⚠️<br /><strong>Use it at your own risk. No support is provided.</strong>",
   "note": "Note: If you need to change the language or change the debrid API key after clicking \"Load Preset Addons\", you will need to reload the page and start over.",
   "authentication": "Authentication",
