⚡️ Add option to select different Trakt catalogs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,18 +51,19 @@
   "italian": "Italian",
   "german": "German",
   "factory": "Factory",
-  "step2_debrid_api_key": "Step 2: Enter Debrid API Key (optional)",
+  "step2_select_catalog": "Step 2: Select a Catalog",
+  "step3_debrid_api_key": "Step 3: Enter Debrid API Key (optional)",
   "get_api_key_here": "Get it from here",
-  "step3_additional_addons": "Step 3: Additional addons (optional)",
-  "step4_additional_options": "Step 4: Additional options (optional)",
+  "step4_additional_addons": "Step 4: Additional addons (optional)",
+  "step5_additional_options": "Step 5: Additional options (optional)",
   "no_4k": "No 4K",
   "cached_only_debrid": "Cached-only (debrid)",
-  "step5_rpdb_key": "Step 5: Enter RPDB key (optional)",
-  "step6_load_preset": "Step 6: Load preset",
+  "step6_rpdb_key": "Step 6: Enter RPDB key (optional)",
+  "step7_load_preset": "Step 7: Load preset",
   "load_addons_preset": "Load Addons Preset",
-  "step7_customize_addons": "Step 7: Customize Addons (optional)",
-  "step7_add_custom_addons": "Paste the manifest URL of additional addons you wish to include",
-  "step8_bootstrap_account": "Step 8: Bootstrap account",
+  "step8_customize_addons": "Step 8: Customize Addons (optional)",
+  "step8_add_custom_addons": "Paste the manifest URL of additional addons you wish to include",
+  "step9_bootstrap_account": "Step 9: Bootstrap account",
   "sync_to_stremio": "Sync to Stremio",
   "edit_manifest": "Edit manifest",
   "how_step1": "Login to",
